--- a/manual.html
+++ b/manual.html
@@ -950,8 +950,10 @@ function loadlanguage(lang,ind,omithistory) {
 	  		activeLanguage = lang;
 	  		for (count=1;count<=9;count++) {
 	  			key2 = "chapter" + count;
-	    		tempHTML=JSON.parse(data[key2].text);
-	    		document.getElementById("m-main-" + key2).outerHTML = tempHTML;
+	  			if (data[key2] != undefined) {
+	    			tempHTML=JSON.parse(data[key2].text);
+	    			document.getElementById("m-main-" + key2).outerHTML = tempHTML;
+	    		}
 	    	}
 	    	if (omithistory != undefined) {
 	    		if (omithistory == 1) {
