--- a/manual.html
+++ b/manual.html
@@ -529,7 +529,14 @@
 				<p>First of all, it is worth noting that you do not need to do anything to save SimFile on device. SimTIVA is a web application and utilizes an interface called the "Local Storage API" to manage the simulations that you have run on your device. As you run a simulation, it is automatically saved.</p>
 				<p>In the Share/Save panel, which can be easily accessed via the <span class="m-icon-inline"><i class="fas fa-share-alt fa-fw"></i></span> Share button, you can type a File Name for easy identification of the SimFile later on.</p>
 				<p class="m-h3">The "Load File" panel</p>
+				<p>Here is the appearance of the "Load File" Panel:</p>
+				<div class="m-image-container">
+					<img src="manualresources/ss-9-loadfile.png">
+				</div>
 				<p>From the first screen, click <span class="m-icon-inline"><i class="fas fa-save fa-fw"></i></span> "Load File" (A), then click "Load Local SimFile" (B). This will take you to the "Load File" panel. A list of previously saved simulations will appear. Choose the desired SimFile and click "Load Selection". After loading, you can choose to "Resume Simulation", see the section below.</p>
+				<div class="m-image-container">
+					<img src="manualresources/ss-9-loadfileinstructions.png">
+				</div>
 				<p class="m-h3">Rescue (Rescuing the last-saved SimFile)</p>
 				<p>Sometimes, accidents can happen. The browser window might have frozen or closed unexpectedly. By clicking <span class="m-icon-inline"><i class="fas fa-life-ring fa-fw"></i></span> "Rescue" on the first screen, the last-saved SimFile will be loaded and the data will be restored. Here you can resume from the last saved time point.</p>
 			</section>
